--- a/css/style.less
+++ b/css/style.less
@@ -180,7 +180,7 @@
   // SLIDE CLASSES
   // ========================================================================
   .slide-transition {
-    background-color: #0053d1;
+    background-color: #ffffff;
     h1 {
       font-size: @basefontsize * 2.5;
       line-height: @basefontsize * 3;
